updated files (img, icos, html)

--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="I3 Hub - Download Student & Exam Tools" />
     <meta property="og:description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
-    <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" />
+    <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
     <meta property="og:url" content="https://gpsmartapps.github.io/I3Hub" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
@@ -26,7 +26,7 @@
     <meta property="og:title" content="I3 Hub - Download Student & Exam Tools" />
     <meta property="og:description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
-    <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" />
+    <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
     <meta property="og:url" content="https://gpsmartapps.github.io/I3Hub/" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
@@ -36,24 +36,24 @@
     <meta itemprop="name" content="I3 Hub - App Library">
     <meta itemprop="description"
         content="Explore and download powerful apps built for schools, exams, and student success.">
-    <meta itemprop="image" content="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png">
+    <meta itemprop="image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png">
 
     <!-- Twitter Card Meta -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="I3 Hub - Download Student & Exam Tools" />
     <meta name="twitter:description"
         content="Get the latest school and exam apps from I3 Hub. Streamline education and registration processes." />
-    <meta name="twitter:image" content="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" />
+    <meta name="twitter:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
     <meta name="twitter:site" content="@i3hub" />
     <meta name="twitter:creator" content="@i3hub" />
 
     <title>I3 Hub - App Library</title>
 
     <!-- Favicons -->
-    <link rel="icon" type="image/x-icon" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.ico">
-    <link rel="icon" type="image/png" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" sizes="96x96">
-    <link rel="apple-touch-icon" href="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png">
+    <link rel="icon" type="image/x-icon" href="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.ico">
+    <link rel="icon" type="image/png" href="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" sizes="96x96">
+    <link rel="apple-touch-icon" href="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png">
 
     <link rel="stylesheet" href="styles.css" />
 </head>
@@ -62,7 +62,7 @@
 <body oncontextmenu="return false;">
     <!-- Hero Section -->
     <div class="hero">
-        <img src="https://gpsmartapps.github.io/I3Hub/assets/_logo_i3.png" alt="I3 Hub Logo" class="site-logo">
+        <img src="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" alt="I3 Hub Logo" class="site-logo">
         <h1>Welcome to I3 Hub</h1>
         <p>Download our latest applications for an enhanced experience.</p>
     </div>
@@ -92,20 +92,20 @@
         <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
             data-href="https://www.dropbox.com/scl/fi/8fj1wcm07jjqf4jnr6pf9/W3-SSCE.exe?rlkey=mnnvp1nhvm1dwxdza2znvc1ff&dl=1"
             download>
-            <img src="https://gpsmartapps.github.io/I3Hub/assets/_scelogo_.png" alt="App Icon"
+            <img src="https://gpsmartapps.github.io/I3Hub/assets/scelogo_.png" alt="App Icon"
                 style="filter: brightness(0) invert();">
             W3 SSCE
         </a>
         <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
             data-href="https://www.dropbox.com/scl/fi/i9w862ezexxnn6civruxv/W3-BECE.exe?rlkey=ary36h7gben35nrvr201tzb4p&dl=1"
             download>
-            <img src="https://gpsmartapps.github.io/I3Hub/assets/_bcelogo_.png" alt="App Icon"
+            <img src="https://gpsmartapps.github.io/I3Hub/assets/bcelogo_.png" alt="App Icon"
                 style="filter: brightness(0) invert();">
             W3 BECE
         </a>
         <a class="app-link" href="javascript:void(0);" onclick="window.open(this.getAttribute('data-href'), '_blank')"
             data-href="https://paystack.shop/w3pay">
-            <img src="https://gpsmartapps.github.io/I3Hub/assets/_cart_.png" alt="Market Icon"
+            <img src="https://gpsmartapps.github.io/I3Hub/assets/cart_.png" alt="Market Icon"
                 style="filter: brightness(0) invert(1);">
             Market Place
         </a>
