--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -7,23 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="description"
-        content="Download powerful student-focused apps from I3 Hub. Access tools for exam registration, academic tracking, image capture, and more – all in one secure portal." />
+        content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
     <meta name="keywords"
         content="I3Hub, app download, academic tools, student management, exam software, school apps, BECE, SSCE, smart capture, educational software" />
     <meta name="author" content="I3 Hub" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph Meta Tags for social media previews -->
-    <meta property="og:title" content="I3 Hub - Download Student & Exam Tools" />
+    <meta property="og:title" content="I3 Hub - App Library" />
     <meta property="og:description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
     <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
     <meta property="og:url" content="https://gpsmartapps.github.io/I3Hub" />
+
+
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="I3 Hub" />
 
-    <meta property="og:title" content="I3 Hub - Download Student & Exam Tools" />
+    <meta property="og:title" content="I3 Hub - App Library" />
     <meta property="og:description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
     <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
@@ -35,16 +37,17 @@
     <!-- WhatsApp & general social preview support -->
     <meta itemprop="name" content="I3 Hub - App Library">
     <meta itemprop="description"
-        content="Explore and download powerful apps built for schools, exams, and student success.">
+        content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools.">
     <meta itemprop="image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png">
 
     <!-- Twitter Card Meta -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="I3 Hub - Download Student & Exam Tools" />
+    <meta name="twitter:title" content="I3 Hub - App Library" />
     <meta name="twitter:description"
-        content="Get the latest school and exam apps from I3 Hub. Streamline education and registration processes." />
+        content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
     <meta name="twitter:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
     <meta name="twitter:site" content="@i3hub" />
+    <meta property="og:locale" content="en_US">
     <meta name="twitter:creator" content="@i3hub" />
 
     <title>I3 Hub - App Library</title>
