--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <meta name="description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
     <meta name="keywords"
@@ -19,12 +18,13 @@
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
     <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
     <meta property="og:url" content="https://gpsmartapps.github.io/I3Hub" />
+    <meta property="og:image:secure_url" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
+    <meta property="og:image:width" content="1200" />
 
 
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="I3 Hub" />
-
     <meta property="og:title" content="I3 Hub - App Library" />
     <meta property="og:description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
@@ -34,11 +34,14 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="I3 Hub" />
 
+
     <!-- WhatsApp & general social preview support -->
     <meta itemprop="name" content="I3 Hub - App Library">
     <meta itemprop="description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools.">
     <meta itemprop="image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png">
+    <meta itemprop="url" content="https://gpsmartapps.github.io/I3Hub/">
+    <meta itemprop="image:width" content="1200">
 
     <!-- Twitter Card Meta -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -49,6 +52,8 @@
     <meta name="twitter:site" content="@i3hub" />
     <meta property="og:locale" content="en_US">
     <meta name="twitter:creator" content="@i3hub" />
+    <meta name="twitter:image:src" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
+    <meta name="twitter:image:width" content="1200" />
 
     <title>I3 Hub - App Library</title>
 
