--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -39,9 +39,10 @@
     <meta itemprop="name" content="I3 Hub - App Library">
     <meta itemprop="description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools.">
-    <meta itemprop="image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png">
-    <meta itemprop="url" content="https://gpsmartapps.github.io/I3Hub/">
-    <meta itemprop="image:width" content="1200">
+    <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
 
     <!-- Twitter Card Meta -->
     <meta name="twitter:card" content="summary_large_image" />
