error-page added

--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta name="description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
     <meta name="keywords"
@@ -12,49 +13,26 @@
     <meta name="author" content="I3 Hub" />
     <meta name="robots" content="index, follow" />
 
-    <!-- Open Graph Meta Tags for social media previews -->
+    <!-- Open Graph for Facebook, WhatsApp, LinkedIn -->
     <meta property="og:title" content="I3 Hub - App Library" />
     <meta property="og:description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
-    <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
-    <meta property="og:url" content="https://gpsmartapps.github.io/I3Hub" />
-    <meta property="og:image:secure_url" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
-    <meta property="og:image:width" content="1200" />
-
-
-    <meta property="og:type" content="website" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="I3 Hub" />
-    <meta property="og:title" content="I3 Hub - App Library" />
-    <meta property="og:description"
-        content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
-    <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
-    <meta property="og:url" content="https://gpsmartapps.github.io/I3Hub/" />
-    <meta property="og:type" content="website" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="I3 Hub" />
-
-
-    <!-- WhatsApp & general social preview support -->
-    <meta itemprop="name" content="I3 Hub - App Library">
-    <meta itemprop="description"
-        content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools.">
     <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://gpsmartapps.github.io/I3Hub" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="I3 Hub" />
 
-
-    <!-- Twitter Card Meta -->
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="I3 Hub - App Library" />
     <meta name="twitter:description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
     <meta name="twitter:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
     <meta name="twitter:site" content="@i3hub" />
-    <meta property="og:locale" content="en_US">
     <meta name="twitter:creator" content="@i3hub" />
-    <meta name="twitter:image:src" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
-    <meta name="twitter:image:width" content="1200" />
 
     <title>I3 Hub - App Library</title>
 
@@ -65,6 +43,10 @@
     <link rel="apple-touch-icon" href="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png">
 
     <link rel="stylesheet" href="styles.css" />
+
+    <noscript>
+        <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
+    </noscript>
 </head>
 
 
