--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -26,13 +26,11 @@
     <meta property="og:site_name" content="I3 Hub" />
 
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="I3 Hub - App Library" />
-    <meta name="twitter:description"
+    <meta property="og:title" content="I3 Hub - App Library" />
+    <meta property="og:description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
-    <meta name="twitter:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
-    <meta name="twitter:site" content="@i3hub" />
-    <meta name="twitter:creator" content="@i3hub" />
+    <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/i3hub-preview.png" />
+    <meta name="twitter:card" content="summary_large_image" />
 
     <title>I3 Hub - App Library</title>
 
