--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -29,7 +29,7 @@
     <meta property="og:title" content="I3 Hub - App Library" />
     <meta property="og:description"
         content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
-    <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/i3hub-preview.png" />
+    <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <title>I3 Hub - App Library</title>
