--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -12,6 +12,8 @@
         content="I3Hub, app download, academic tools, student management, exam software, school apps, BECE, SSCE, smart capture, educational software" />
     <meta name="author" content="I3 Hub" />
     <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#ffffff" />
+
 
     <!-- Open Graph for Facebook, WhatsApp, LinkedIn -->
     <meta property="og:title" content="I3 Hub - App Library" />
@@ -24,6 +26,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="I3 Hub" />
+
 
     <!-- Twitter Card -->
     <meta property="og:title" content="I3 Hub - App Library" />
@@ -43,7 +46,7 @@
     <link rel="stylesheet" href="styles.css" />
 
     <noscript>
-        <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
+        <meta http-equiv="refresh" content="0;url=/I3Hub/error-page.html">
     </noscript>
 </head>
 
