--- a/I3Hub/error-page.html
+++ b/I3Hub/error-page.html
@@ -7,24 +7,20 @@
     <title>JavaScript Required - I3 Hub</title>
     <link rel="icon" href="/I3Hub/assets/logo_i3.ico" type="image/x-icon">
     <link rel="icon" href="/I3Hub/assets/logo_i3.png" type="image/png">
-    <link href="/I3Hub/public/Errors/error.min.css" rel="stylesheet">
+    <link href="https://gpsmartapps.github.io/I3Hub/public/Errors/error.min.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="error-container">
         <div class="error-content">
-            <img src="/I3Hub/public/Errors/no-js.png" alt="JavaScript Required" class="error-image">
+            <img src="https://gpsmartapps.github.io/I3Hub/public/Errors/no-js.png" alt="JavaScript Required"
+                class="error-image">
             <h1>JavaScript Required</h1>
             <p>This application requires JavaScript to be enabled in your browser.</p>
             <p>Please enable JavaScript and refresh the page.</p>
-            <a href="/I3Hub/index.html" class="error-home-link">Return to Home</a>
+            <a href="https://gpsmartapps.github.io/I3Hub/index.html" class="error-home-link">Return to Home</a>
         </div>
     </div>
-    <div id="notification-bar" class="notification-bar">
-        <span id="notification-message" class="notification-message"></span>
-    </div>
-    <div id="notification" class="notification unselectable"></div>
-    <script src="/I3Hub/public/Global/glob.js"></script>
 </body>
 
 </html>
