--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -75,12 +75,12 @@
                 style="filter: brightness(0) invert();">
             W3 Academic Hub (x32)
         </a>
-        <!-- <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
-            data-href="#" download>
-            <img src="https://gpsmartapps.github.io/I3Hub/assets/_bcelogo_.png"
-                alt="App Icon" style="filter: brightness(0) invert();">
-            Smart BECE Image Capture
-        </a> -->
+        <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
+            data-href="https://www.dropbox.com/scl/fi/kij7rs5anm6a9b6zosgw6/W3-UniCapture.exe?rlkey=j7hu78momzvdi56r6qwtfkv1a&dl=1"
+            download>
+            <img src="https://gpsmartapps.github.io/I3Hub/assets/webcam_.png" alt="App Icon"
+                style="filter: brightness(0) invert();">W3 UniCapture
+        </a>
         <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
             data-href="https://www.dropbox.com/scl/fi/8fj1wcm07jjqf4jnr6pf9/W3-SSCE.exe?rlkey=mnnvp1nhvm1dwxdza2znvc1ff&dl=1"
             download>
