--- a/PlugNGo/index.html
+++ b/PlugNGo/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plug 'n Go - Phone Check-in & Check-out</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.18.6"></script>
     <link href="/PlugNGo/style.css" rel="stylesheet">
 </head>
 
