--- a/I3Hub/index.html
+++ b/I3Hub/index.html
@@ -1,116 +1,95 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description"
-        content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
-    <meta name="keywords"
-        content="I3Hub, app download, academic tools, student management, exam software, school apps, BECE, SSCE, smart capture, educational software" />
+    <!-- Meta SEO -->
+    <meta name="description" content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
+    <meta name="keywords" content="I3Hub, app download, academic tools, student management, exam software, school apps, BECE, SSCE, smart capture, educational software" />
     <meta name="author" content="I3 Hub" />
     <meta name="robots" content="index, follow" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#f0fff0" />
 
-
-    <!-- Open Graph for Facebook, WhatsApp, LinkedIn -->
-    <meta property="og:title" content="I3 Hub - App Library" />
-    <meta property="og:description"
-        content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
+    <!-- Open Graph -->
+    <meta property="og:title" content="I3 Hub – App Library" />
+    <meta property="og:description" content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
     <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://gpsmartapps.github.io/I3Hub" />
     <meta property="og:type" content="website" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="I3 Hub" />
 
-
-    <!-- Twitter Card -->
-    <meta property="og:title" content="I3 Hub - App Library" />
-    <meta property="og:description"
-        content="Access and download top student-focused applications by I3 Hub. Simplify school and exam processes with secure, smart tools." />
-    <meta property="og:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="I3 Hub – App Library" />
+    <meta name="twitter:description" content="Student apps & smart tools." />
+    <meta name="twitter:image" content="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
 
-    <title>I3 Hub - App Library</title>
+    <title>I3 Hub · green & white</title>
 
-    <!-- Favicons -->
-    <link rel="icon" type="image/x-icon" href="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.ico">
-    <link rel="icon" type="image/png" href="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" sizes="96x96">
-    <link rel="apple-touch-icon" href="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
+    <link rel="apple-touch-icon" href="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" />
 
-    <link rel="stylesheet" href="styles.css" />
-
-    <noscript>
-        <meta http-equiv="refresh" content="0;url=/I3Hub/error-page.html">
-    </noscript>
+    <!-- ===== Google Fonts ===== -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,400;14..32,500;14..32,600;14..32,700&display=swap" rel="stylesheet">
 </head>
-
-
 <body oncontextmenu="return false;">
-    <!-- Hero Section -->
-    <div class="hero">
-        <img src="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" alt="I3 Hub Logo" class="site-logo">
-        <h1>Welcome to I3 Hub</h1>
-        <p>Download our latest applications for an enhanced experience.</p>
+
+    <!-- fixed toggle (kept from original, but with green styling) -->
+    <button class="toggle-btn" id="colorToggleBtn" aria-label="switch background green/white">🎨</button>
+
+    <!-- main content card (green & white) -->
+    <div class="card">
+        <div class="hero-green">
+            <img src="https://gpsmartapps.github.io/I3Hub/assets/logo_i3.png" alt="I3 Hub" class="site-logo" />
+            <h1>I3 Hub</h1>
+            <p>green · white · fresh</p>
+        </div>
+
+        <!-- download tiles (green & white theme) -->
+        <div class="app-list">
+            <!-- x64 -->
+            <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')" data-href="https://www.dropbox.com/scl/fi/gbqq776f8ncbd6h4vngnj/Academic-Hub.exe?rlkey=e1ac3irjobx987cr4ijidrmbl&dl=1" download>
+                <img src="https://gpsmartapps.github.io/I3Hub/assets/logo.png" alt="app icon" />
+                <span>W3 Academic Hub (x64)</span>
+            </a>
+            <!-- x32 -->
+            <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')" data-href="https://www.dropbox.com/scl/fi/9vafmyae07jciw3n5s55h/Academic-Hub-x32.exe?rlkey=zhhf34ynw99xlc827rjulwehq&dl=1" download>
+                <img src="https://gpsmartapps.github.io/I3Hub/assets/logo.png" alt="app icon" />
+                <span>W3 Academic Hub (x32)</span>
+            </a>
+            <!-- UniCapture -->
+            <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')" data-href="https://www.dropbox.com/scl/fi/kij7rs5anm6a9b6zosgw6/W3-UniCapture.exe?rlkey=j7hu78momzvdi56r6qwtfkv1a&dl=1" download>
+                <img src="https://gpsmartapps.github.io/I3Hub/assets/webcam_.png" alt="webcam icon" />
+                <span>W3 UniCapture</span>
+            </a>
+            <!-- SSCE -->
+            <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')" data-href="https://www.dropbox.com/scl/fi/8fj1wcm07jjqf4jnr6pf9/W3-SSCE.exe?rlkey=mnnvp1nhvm1dwxdza2znvc1ff&dl=1" download>
+                <img src="https://gpsmartapps.github.io/I3Hub/assets/scelogo_.png" alt="ssce icon" />
+                <span>W3 SSCE</span>
+            </a>
+            <!-- BECE -->
+            <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')" data-href="https://www.dropbox.com/scl/fi/3ou07fe005gv0v252vt6i/W3-BECE.exe?rlkey=jie7nlb87me5hs7ago8xcdk1b&dl=1" download>
+                <img src="https://gpsmartapps.github.io/I3Hub/assets/bcelogo_.png" alt="bece icon" />
+                <span>W3 BECE</span>
+            </a>
+            <!-- Market (opens new tab) -->
+            <a class="app-link" href="javascript:void(0);" onclick="window.open(this.getAttribute('data-href'), '_blank')" data-href="https://paystack.shop/w3pay">
+                <img src="https://gpsmartapps.github.io/I3Hub/assets/cart_.png" alt="Market Icon" />
+                <span>Market Place</span>
+            </a>
+        </div>
+
+        <!-- footer inside card (aligned with green) -->
+        <div class="footer">
+            &copy; 2025 I3 Hub | All rights reserved.
+        </div>
     </div>
 
-    <!-- Download Section -->
-    <div class="container">
-        <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
-            data-href="https://www.dropbox.com/scl/fi/gbqq776f8ncbd6h4vngnj/Academic-Hub.exe?rlkey=e1ac3irjobx987cr4ijidrmbl&dl=1"
-            download>
-            <img src="https://gpsmartapps.github.io/I3Hub/assets/logo.png" alt="App Icon"
-                style="filter: brightness(0) invert();">
-            W3 Academic Hub (x64)
-        </a>
-        <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
-            data-href="https://www.dropbox.com/scl/fi/9vafmyae07jciw3n5s55h/Academic-Hub-x32.exe?rlkey=zhhf34ynw99xlc827rjulwehq&dl=1"
-            download>
-            <img src="https://gpsmartapps.github.io/I3Hub/assets/logo.png" alt="App Icon"
-                style="filter: brightness(0) invert();">
-            W3 Academic Hub (x32)
-        </a>
-        <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
-            data-href="https://www.dropbox.com/scl/fi/kij7rs5anm6a9b6zosgw6/W3-UniCapture.exe?rlkey=j7hu78momzvdi56r6qwtfkv1a&dl=1"
-            download>
-            <img src="https://gpsmartapps.github.io/I3Hub/assets/webcam_.png" alt="App Icon"
-                style="filter: brightness(0) invert();">W3 UniCapture
-        </a>
-        <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
-            data-href="https://www.dropbox.com/scl/fi/8fj1wcm07jjqf4jnr6pf9/W3-SSCE.exe?rlkey=mnnvp1nhvm1dwxdza2znvc1ff&dl=1"
-            download>
-            <img src="https://gpsmartapps.github.io/I3Hub/assets/scelogo_.png" alt="App Icon"
-                style="filter: brightness(0) invert();">
-            W3 SSCE
-        </a>
-        <a class="app-link" href="javascript:void(0);" onclick="window.location=this.getAttribute('data-href')"
-            data-href="https://www.dropbox.com/scl/fi/3ou07fe005gv0v252vt6i/W3-BECE.exe?rlkey=jie7nlb87me5hs7ago8xcdk1b&dl=1"
-            download>
-            <img src="https://gpsmartapps.github.io/I3Hub/assets/bcelogo_.png" alt="App Icon"
-                style="filter: brightness(0) invert();">
-            W3 BECE
-        </a>
-        <a class="app-link" href="javascript:void(0);" onclick="window.open(this.getAttribute('data-href'), '_blank')"
-            data-href="https://paystack.shop/w3pay">
-            <img src="https://gpsmartapps.github.io/I3Hub/assets/cart_.png" alt="Market Icon"
-                style="filter: brightness(0) invert(1);">
-            Market Place
-        </a>
-    </div>
-
-    <!-- Color Toggle Button -->
-    <button id="colorToggleBtn" class="toggle-btn">🎨</button>
-
-    <!-- Footer -->
-    <div class="footer">
-        &copy; 2025 I3 Hub | All rights reserved.
-    </div>
-    <script src="script.js" defer></script>
-</body>
-
-</html>
+    <!-- noscript fallback (optional) -->
+    <noscript>
+        <div class="noscript-warn">JavaScript is off. <a href="/I3Hub/error-page.html">Visit error page</a></div>
+    </noscript>
